--- a/bartery_project/barter_app/trades/templates/homepage.html
+++ b/bartery_project/barter_app/trades/templates/homepage.html
@@ -45,6 +45,8 @@
   <!-- Hero Image -->
   <div class="hero-section">
     <img src="{% static 'images/barteryImage.jpg' %}" alt="Barter Collage Hero">
+    <div class="overlay-text top-right">Bartered with Care,</div>
+  <div class="overlay-text bottom-left">Traded with Love.</div>
   </div>
 
   <section class="listings-preview">
